--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }],
     "minimum-stability": "stable",
     "require": {
-        "monolog/monolog": "^2.0"
+        "monolog/monolog": "^2.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": { "App\\": "src/" }
